# yauiotl

./: .gitignore  README.md
case/: case-pdfs.cabal
case/case-pdfs/: LICENSE  README  hsdiag.cabal
case/case-pdfs/app/: pdf.hs
case/case-pdfs/src/: Lib.hs
code/: README
code/lib/: awsiot.py  hardware.py
device-tree/: README
device-tree/button/: do-it  mjobutt-overlay.dts
device-tree/heartbeat/: do-it  heartbeat-overlay.dts
device-tree/rotary-encoder/: do-it  rotenc-overlay.dts
systemd/: castor.service  pollux.service
