name:                case-pdfs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/mjoldfield/yauiotl
license:             BSD3
license-file:        LICENSE
author:              Martin Oldfield
maintainer:          ex-stack@mjoldfield.com
copyright:           Martin Oldfield
category:            experimental
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , diagrams, diagrams-lib
  default-language:    Haskell2010

executable pdf-exe
  hs-source-dirs:      app
  main-is:             pdf.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , case-pdfs
                     , diagrams, diagrams-lib, diagrams-cairo
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mjoldfield/yauiotl/case
